c4prj1_deck/grade.txt
Grading at Tue Sep 29 23:30:15 UTC 2020
Compiling deck.c -> deck.o
deck.c: In function ‘build_remaining_deck’:
deck.c:65:13: error: passing argument 1 of ‘free_deck’ from incompatible pointer type [-Werror=incompatible-pointer-types]
   free_deck(temp -> cards);
             ^
In file included from deck.c:4:0:
deck.h:19:6: note: expected ‘deck_t * {aka struct deck_tag *}’ but argument is of type ‘card_t ** {aka struct card_tag **}’
 void free_deck(deck_t * deck) ;
      ^
cc1: all warnings being treated as errors
Compilation of deck.c failed

Overall Grade: F
